moved install npm scripts to the npm file

--- a/VSCodeEditor/use-npm/index.html
+++ b/VSCodeEditor/use-npm/index.html
@@ -3,6 +3,13 @@
 <head>
   <title>Sample using vs code editor</title>
 
+  <!-- 
+    
+    npm install jquery@3.5.1
+    npm install monaco-editor@0.20.0 
+
+-->
+
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
 
   <link rel="stylesheet" data-name="vs/editor/editor.main"
